[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = kontroll
maintainer = Erik Johansson
maintainer_email = erik.johansson89@gmail.com
summary = Kontroll aims to aid in multi region openstack clouds management
license = MIT
description-file = README.rst
home-page = #TODO
requires-python = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*
project_urls =
    Bug Tracker = #TODO
    CI: Travis = #TODO
    Documentation = #TODO
    Mailing lists = #TODO
    Source Code = #TODO
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: System :: Systems Administration
    Topic :: Utilities


[extras]
#docs =
#    alabaster
#    Sphinx
[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[entry_points]
console_scripts =
    kontroll = kontroll.shell:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1